mod(swag):修改注入方式和内容
